[project]
name = "comfyui_gridswapper"
description = "Gridswapper takes a batch of latents and spreads them over the necessary amount of grids. It then automatically shuffles the images in the grids for each step. So, a batch of 12 latents for a 2x2 grid will generate 3 grid images in each step. It will then shuffle around the images for the next step. This makes it possible for all images to influence the others during the denoising process. This approach works well for generating 2-4 grids."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/kinfolk0117/ComfyUI_GridSwapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_GridSwapper"
Icon = ""
